# CopyCraft

./: CMakeLists.txt
CopyCraft/: CMakeLists.txt  CopyCraft.cpp  CopyCraft.h  camera.cpp  camera.h  delta-time.cpp  delta-time.h  engine.cpp  engine.h  file.cpp  file.h  fly-camera.cpp  fly-camera.h  game-controller.cpp  game-controller.h  game-object.cpp  game-object.h  image.cpp  image.h  input.cpp  input.h  mesh.cpp  mesh.h  object.cpp  object.h  shader-program.cpp  shader-program.h  shader.cpp  shader.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h  transform.cpp  transform.h  vertex.h  window.cpp  window.h
CopyCraft/dependencies/glad/include/glad/: glad.h
CopyCraft/dependencies/glad/src/: glad.c
CopyCraft/shaders/: frag_test.glsl  vertex_test.glsl
